deploy: 5d477a24c72935c31859c4ec62ce9ea8c0dedce6

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html  data-head-attrs="">
 
 <head >
-  <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="head:count" content="2"><link rel="modulepreload" href="/_nuxt/entry-9800e8fc.mjs" as="script" crossorigin><link rel="preload" href="/_nuxt/entry.39332984.css" as="style"><link rel="modulepreload" href="/_nuxt/index-1b76d0b0.mjs" as="script" crossorigin><link rel="prefetch" as="script" href="/_nuxt/error-9eb1b720.mjs"><link rel="prefetch" as="script" href="/_nuxt/home-c320b80d.mjs"><link rel="prefetch" as="script" href="/_nuxt/test-481789d3.mjs"><link rel="prefetch" as="script" href="/_nuxt/authenticated-6f51e072.mjs"><link rel="prefetch" as="script" href="/_nuxt/home_redirect-d1e2cf65.mjs"><link rel="stylesheet" href="/_nuxt/entry.39332984.css">
+  <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="head:count" content="2"><link rel="modulepreload" href="/_nuxt/entry-e1c2d412.mjs" as="script" crossorigin><link rel="preload" href="/_nuxt/entry.39332984.css" as="style"><link rel="modulepreload" href="/_nuxt/index-c9f4f7a5.mjs" as="script" crossorigin><link rel="prefetch" as="script" href="/_nuxt/error-3fc6224b.mjs"><link rel="prefetch" as="script" href="/_nuxt/home-1d8e0d12.mjs"><link rel="prefetch" as="script" href="/_nuxt/test-01a88e0f.mjs"><link rel="prefetch" as="script" href="/_nuxt/authenticated-6f51e072.mjs"><link rel="prefetch" as="script" href="/_nuxt/home_redirect-d1e2cf65.mjs"><link rel="stylesheet" href="/_nuxt/entry.39332984.css">
 </head>
 
 <body  data-head-attrs="">
-  <div id="__nuxt"><div><!--[--><!--[--><div> kek </div><!--]--><!--]--></div></div><script>window.__NUXT__={data:{},state:{error:null},_errors:{},serverRendered:true,config:{public:{},app:{baseURL:"\u002F",buildAssetsDir:"\u002F_nuxt\u002F",cdnURL:""}}}</script><script type="module" src="/_nuxt/entry-9800e8fc.mjs" crossorigin></script><script type="module" src="/_nuxt/index-1b76d0b0.mjs" crossorigin></script>
+  <div id="__nuxt"><div><!--[--><!--[--><div><a href="/home" class=""> Home </a></div><!--]--><!--]--></div></div><script>window.__NUXT__={data:{},state:{error:null},_errors:{},serverRendered:true,config:{public:{},app:{baseURL:"\u002F",buildAssetsDir:"\u002F_nuxt\u002F",cdnURL:""}}}</script><script type="module" src="/_nuxt/entry-e1c2d412.mjs" crossorigin></script><script type="module" src="/_nuxt/index-c9f4f7a5.mjs" crossorigin></script>
 </body>
 
 </html>
