--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html  data-head-attrs="">
 
 <head >
-  <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="head:count" content="2"><link rel="modulepreload" href="/_nuxt/entry-541c9e20.mjs" as="script" crossorigin><link rel="preload" href="/_nuxt/entry.8acccd54.css" as="style"><link rel="modulepreload" href="/_nuxt/index-fb75299e.mjs" as="script" crossorigin><link rel="prefetch" href="/_nuxt/home_background.2c2e516a.svg"><link rel="prefetch" as="script" href="/_nuxt/home-c98f75e5.mjs"><link rel="prefetch" as="script" href="/_nuxt/authenticated-6f51e072.mjs"><link rel="prefetch" as="script" href="/_nuxt/home_redirect-d1e2cf65.mjs"><link rel="prefetch" as="script" href="/_nuxt/error-7ab0566f.mjs"><link rel="stylesheet" href="/_nuxt/entry.8acccd54.css">
+  <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="head:count" content="2"><link rel="modulepreload" href="/_nuxt/entry-e8502700.mjs" as="script" crossorigin><link rel="preload" href="/_nuxt/entry.48030ecc.css" as="style"><link rel="modulepreload" href="/_nuxt/index-dd8565cd.mjs" as="script" crossorigin><link rel="prefetch" as="script" href="/_nuxt/home-40945d9c.mjs"><link rel="prefetch" as="script" href="/_nuxt/authenticated-6f51e072.mjs"><link rel="prefetch" as="script" href="/_nuxt/home_redirect-d1e2cf65.mjs"><link rel="prefetch" as="script" href="/_nuxt/error-4092c1d4.mjs"><link rel="stylesheet" href="/_nuxt/entry.48030ecc.css">
 </head>
 
 <body  data-head-attrs="">
-  <div id="__nuxt"><div><!--[--><!--[--><div><p> Redirecting... </p></div><!--]--><!--]--></div></div><script>window.__NUXT__={data:{},state:{error:null},_errors:{},serverRendered:true,config:{public:{},app:{baseURL:"\u002F",buildAssetsDir:"\u002F_nuxt\u002F",cdnURL:""}}}</script><script type="module" src="/_nuxt/entry-541c9e20.mjs" crossorigin></script><script type="module" src="/_nuxt/index-fb75299e.mjs" crossorigin></script>
+  <div id="__nuxt"><div><!--[--><!--[--><div><p> Redirecting... </p></div><!--]--><!--]--></div></div><script>window.__NUXT__={data:{},state:{error:null},_errors:{},serverRendered:true,config:{public:{},app:{baseURL:"\u002F",buildAssetsDir:"\u002F_nuxt\u002F",cdnURL:""}}}</script><script type="module" src="/_nuxt/entry-e8502700.mjs" crossorigin></script><script type="module" src="/_nuxt/index-dd8565cd.mjs" crossorigin></script>
 </body>
 
 </html>
